--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -15,19 +15,19 @@
 
 <body style="background-color: #C2D6A1;" th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
-    <input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
-	<h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
+	<h5 id=adminMessage th:text="'' + ${loginUser}" style="color: #062d73;"></h5>
 	<!-- ADDED[E] AMULYA To To Display the ssoid-->
 
 	<div class="row justify-content-center">
 		<div class="card" align="center">
-			<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}" >
+			<form method="post" class="form-horizontal" th:action="@{/searchClick(ssoid = ${ssoid})}">
 				<h1>STM:silicone test method</h1>
 				<!-- ADDED[S] AMULYA To Add Success and Failer Message-->
 				<p id="message" th:text="${message}"></p>
-                <p id="message" th:text="${error}"></p>
-                <!-- ADDED[E] AMULYA To Add Success and Failer Message-->
-				<div class="form-group" style="margin-top: 50px;">
+				<p id="message" th:text="${error}"></p>
+				<!-- ADDED[E] AMULYA To Add Success and Failer Message-->
+				<div class="form-group">
 					<label for="username" class="col-sm-5 control-label">STMnumber</label>
 					<div class="col-sm-2">
 						<input style="border: 3px solid black;" type="text" class="form-control invalid-feedback"
@@ -91,25 +91,26 @@
 							style="border: 3px solid black;" maxlength="11">
 					</div>
 				</div>
-				<table>
-					<tr>
-						<td>
-							<button class="btn btn-lg btn-primary button1" type="submit"
-								style="background-color: darkblue;" onsubmit="searchcall()">Search</button>
-						</td>
-						<td>
-							<button class="btn btn-primary btn-lg button2" type="reset" style="background-color: coral;"
-								onclick="resetcall()">reset</button>
-						</td>
-					</tr>
-				</table>
+				<div>
+					<p>
+						<button class="btn btn-lg btn-primary button1" type="submit" style="background-color: darkblue;"
+							onsubmit="searchcall()">Search</button>
+
+						<button class="btn btn-primary btn-lg button2" type="reset" style="background-color: coral;"
+							onclick="resetcall()">reset</button>
+
+						<button type="button" class="btn btn-primary btn-lg"
+							th:onclick="|window.location.href='@{/admindash}'|">Menu</button>
+					</p>
+				</div>
 			</form>
-			<tr>
+			<!--<tr>
 				<td>
 					<button type="button" class="btn btn-primary btn-lg button3"
 						th:onclick="|window.location.href='@{/admindash}'|">Menu</button>
 				</td>
-			</tr>
+			</tr>-->
+        </form>
 			<div class="table-responsive" style="margin-left: 10px; margin-top: 60px;">
 				<table border="3px solid black" class="table table-striped table-hover" style="width: 20%"
 					id="searchTable" title="Confidential information">
@@ -152,7 +153,7 @@
 				</table>
 				<div style="margin-right: 70%;">
 					<form action="/viewClick" method="post">
-					<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
+						<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 						<button style="color: white; background-color:darkblue" class="btn btn-lg btn-primary button1"
 							type="submit">View</button>
 					</form>
