--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -142,7 +142,7 @@ button:hover {
 </head>
 <body id="dashboardBody">
 <input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
-<h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
+<!-- <h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5> -->
 
 
  <h1>STM: Silicone Test Method</h1>
