--- a/src/main/resources/templates/ReviseScreen.html
+++ b/src/main/resources/templates/ReviseScreen.html
@@ -131,7 +131,7 @@ button:hover {
 <body> 
 
 <input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
-<h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>  
+<!-- <h5 id =adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5> -->  
     <h1>STM: Silicone Test Method</h1>
     <p id="message" th:text="${message}"></p>
     <p id="message" th:text="${error}"></p>    
