--- a/src/main/resources/static/CSS/styles.css
+++ b/src/main/resources/static/CSS/styles.css
@@ -1,166 +1,205 @@
 /* style.css */
 /*Added for LoginScreen */
-#loginscreenbody{
-	    background-color: #cbe3b5;
-	
+#loginscreenbody {
+	background-color: #cbe3b5;
+
 }
+
 #adminMessage {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            color: #062d73;
-            font-size: 18px;
-            font-weight: bold;
-        }
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #062d73;
+	font-size: 18px;
+	font-weight: bold;
+}
+
 /*End for LoginScreen */
 
 
 #dashboardBody {
-    background-color: #cbe3b5;
-    font-family: Arial, sans-serif;
-    text-align: center;
+	background-color: #cbe3b5;
+	font-family: Arial, sans-serif;
+	text-align: center;
 }
+
 .dashboard {
-    width: 200px;
-    margin-left:250px;
+	width: 200px;
+	margin-left: 250px;
 }
 
 .dashboard-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin: 5px 0;
-    background-color: #000066;
-    color: #fff;
-    text-decoration: none;
-    text-align: center;   
-    border: 3px solid rgb(64, 0, 0);
-    border-radius: 10px;
-    
+	display: block;
+	width: 100%;
+	padding: 10px;
+	margin: 5px 0;
+	background-color: #000066;
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
+	border: 3px solid rgb(64, 0, 0);
+	border-radius: 10px;
+
 }
 
 .dashboard-button:hover {
-    background-color: #2980b9;
+	background-color: #2980b9;
 }
-.dash
-{
+
+.dash {
 	width: 200px;
-    margin: 0 450px;
+	margin: 0 450px;
 }
-.return
-{
+
+.return {
 	width: 100px;
-    margin: 0 700px;
+	margin: 0 700px;
 }
 
 .disabled-link {
-            pointer-events: none;
-            color: #999;
-            text-decoration: none;
-        }
-.label-container {
-            display: flex;           
-            width: 100%;
-        }
-.label-container label {
-            width: 50%;
-            text-align:left;
-            margin: 10px 20px;
-           
-        }
-.registerclose
-{	
-    width: 20%;
-    background-color: #000066;
-    color: #fff;    
-    text-align: center;   
-    border: 3px solid rgb(64, 0, 0);
-    border-radius:10px;
+	pointer-events: none;
+	color: #999;
+	text-decoration: none;
 }
 
-.returnClear
-{	
-    width: 20%;
-    background-color: orange;
-    color: #fff;    
-    text-align: center;   
-    border: 2px solid rgb(64, 0, 0);
-    border-radius:10px;
+.label-container {
+	display: flex;
+	width: 100%;
 }
-input[type="text"]{
+
+.label-container label {
+	width: 50%;
+	text-align: left;
+	margin: 10px 20px;
+
+}
+
+.registerclose {
+	width: 20%;
+	background-color: #000066;
+	color: #fff;
+	text-align: center;
+	border: 3px solid rgb(64, 0, 0);
+	border-radius: 10px;
+}
+
+.returnClear {
+	width: 20%;
+	background-color: orange;
+	color: #fff;
+	text-align: center;
+	border: 2px solid rgb(64, 0, 0);
+	border-radius: 10px;
+}
+
+input[type="text"] {
 	border: 2px solid rgb(0, 0, 0);
 }
 
 
-/* Add more CSS rules as needed */
-
 /* 
 ADD[S]Samata 2023/11/14
 */
-body{
+body {
 	background-color: #C2D6A1;
 }
-.button1{
+
+.button1 {
 	background-color: navy;
 	text-align: center;
 	padding: 3px 15px;
-	min-width:400px;
+	min-width: 310px;
 	color: white;
 	font-size: 17px;
+	margin-right: 10px;
+	border: 2px solid black;
+
 }
-.button2{
+
+.button2 {
 	background-color: darkorange;
 	text-align: center;
-	min-width:400px;
+	min-width: 310px;
 	border-radius: 2px;
+	border: 2px solid black;
+
 	color: white;
 	font-size: 17px;
-	margin-right: 30px;
+	margin-right: 20px;
 	margin-left: 5%;
 }
-.button3{
+
+.button3 {
 	background-color: #50C878;
 	color: white;
 	border: 2px solid black;
+	min-width: 310px;
+	font-size: 17px;
 }
-.form-control
-{
-	  border: 2px solid black;
-	  color: red;
+
+.button4 {
+	background-color: #50C878;
+	border: 2px solid black;
+
 }
-h1
-{
+
+.form-control {
+	border: 2px solid black;
+	color: red;
+}
+
+h1 {
 	text-align: center;
 }
 
-/*ADD[S] Samata*/
-.content { 
-            position: absolute; 
-            top: 50%; 
-            left: 50%; 
-            transform: translate(-50%, -50%); 
-            width: 500px; 
-            height: 200px; 
-            text-align: center; 
-            background-color: #e8eae6; 
-            box-sizing: border-box; 
-            padding: 10px; 
-            z-index: 100; 
-            display: none; 
-             border-radius: 20px;
-            /*to hide popup initially*/ 
-        } 
-          
-       /* .close-btn { 
-            position: absolute; 
-            right: 20px; 
-            top: 15px; 
-            background-color: black; 
-            color: white; 
-            border-radius: 50%; 
-            padding: 4px; 
-        } */
-        
- 
-/*ADD[E] Samata*/
+.content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 500px;
+	height: 200px;
+	text-align: center;
+	background-color: #e8eae6;
+	box-sizing: border-box;
+	padding: 10px;
+	z-index: 100;
+	display: none;
+	border-radius: 20px;
+}
+.table-responsive{
+	margin-left: 80px;
+	margin-top: 60px;
+}
+table, th, tr,thead {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
 
+/*ADDED For ModifySearchdata */
+
+	.download-button {
+		margin-left: 10px;
+		padding: 8px;
+		background-color: red;
+		color: white;
+		border: black;
+		border-radius: 3px;
+		cursor: pointer;
+	}
+
+	.download-button:hover {
+		background-color: #555;
+	}
+	.close {
+		color: #aaa;
+		float: right;
+		font-size: 20px;
+		font-weight: bold;
+		cursor: pointer;
+	}
+
+	.close:hover {
+		color: black;
+	}
+/*ADD[E] Samata*/
