--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -2,8 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymleaf.org">
 <script type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-
-
 <style>
 	body {
 		font-family: Arial, sans-serif;
@@ -78,45 +76,11 @@
 		color: red;
 	}
 
-	#adminMessage {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            color: #062d73;
-            font-size: 18px;
-            font-weight: bold;
-        }
-
-	.close {
-		color: #aaa;
-		float: right;
-		font-size: 20px;
-		font-weight: bold;
-		cursor: pointer;
-	}
-
-	.close:hover {
-		color: black;
-	}
-
 	.file-input {
 		display: flex;
 		align-items: center;
 	}
 
-	.download-button {
-		margin-left: 10px;
-		padding: 8px;
-		background-color: red;
-		color: white;
-		border: black;
-		border-radius: 3px;
-		cursor: pointer;
-	}
-
-	.download-button:hover {
-		background-color: #555;
-	}
 </style>
 
 <head>
@@ -135,7 +99,7 @@
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 	<h1>STM:Silicone Test Method</h1>
-	<p id="message" th:text="${message}"></p>
+	<p th:text="${message}"></p>
 	<p id="message" th:text="${error}"></p>
 	<div id="modal" class="modal">
 		<div class="modal-content">
