@Amulya commited code to make all screens background color in same

--- a/src/main/resources/templates/ModifyScreen.html
+++ b/src/main/resources/templates/ModifyScreen.html
@@ -22,9 +22,9 @@ form {
 	margin: 0 auto;
 	padding: 20px;
 	background-color: #cbe3b5;
-	border: 1px solid #ddd;
+	/* border: 1px solid #ddd;
 	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
 input[type="text"] {
@@ -34,10 +34,11 @@ input[type="text"] {
 	margin: 5px 0;
 	border: 2px solid rgb(0, 0, 0);
 	border-radius: 5px;
+	
 }
 
 #stmNumber{
-background: #cbe3b5;
+background: #cbe3b5;;
 
 }
 
