--- a/src/main/resources/templates/ModifySearchData.html
+++ b/src/main/resources/templates/ModifySearchData.html
@@ -18,10 +18,7 @@
 		max-width: 600px;
 		margin: 0 auto;
 		padding: 20px;
-		background-color: #cbe3b5;
-		border: 1px solid #ddd;
-		border-radius: 5px;
-		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		background-color: #cbe3b5;		
 	}
 
 	input[type="text"],
@@ -95,7 +92,7 @@
 	<script src="js/search.js"></script>
 </head>
 
-<body style="background-color: #C2D6A1;" th:onload="onLoadcall([[${STM}]])">
+<body style="background-color: #cbe3b5;" th:onload="onLoadcall([[${STM}]])">
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
 	<h1>STM:Silicone Test Method</h1>
