--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -25,12 +25,12 @@
 			max-width: 600px;
 			margin: 0 auto;
 			padding: 20px;
-			background-color: #C2D6A1;
+			background-color: #cbe3b5;
 		}
 	</style>
 </head>
 
-<body style="background-color: #C2D6A1;" th:onload="onLoadcall([[${STM}]])">
+<body style="background-color: #cbe3b5;" th:onload="onLoadcall([[${STM}]])">
 	<!-- ADDED[S] AMULYA To Display the ssoid-->
 	<input type="hidden" id="ssoid" name="ssoid" th:value="${ssoid}" />
 	<h5 id=adminMessage th:text="'' + ${ssoid}" style="color: #062d73;"></h5>
