--- a/src/main/resources/templates/DeleteScreen.html
+++ b/src/main/resources/templates/DeleteScreen.html
@@ -21,10 +21,7 @@ form {
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
-	background-color: #cbe3b5;
-	border: 1px solid #ddd;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	background-color: #cbe3b5;	
 }
 
 input[type="text"] {
@@ -34,6 +31,7 @@ input[type="text"] {
 	margin: 5px 0;
 	border: 2px solid rgb(0, 0, 0);
 	border-radius: 5px;
+	background: #cbe3b5;
 }
 
 #stmNumber{
