--- a/src/main/resources/templates/RegistrationPage.html
+++ b/src/main/resources/templates/RegistrationPage.html
@@ -19,10 +19,7 @@ form {
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
-	background-color: #cbe3b5;
-	border: 1px solid #ddd;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	background-color: #cbe3b5;	
 }
 
 input[type="text"], input[type="file"] {
@@ -97,8 +94,14 @@ button:hover {
 	<!-- <div id="pdfError" class="error-message"></div>
     <div id="wordError" class="error-message"></div> -->
 
-	<p id="message" th:text="${message}"></p>
-	<p id="message" th:text="${error}"></p>
+	<!-- <p id="message" th:text="${message}"></p>
+	<p id="message" th:text="${error}"></p> -->
+	<div id="successMessageDiv" th:if="${message}">
+    <p style="color: green;" th:text="${message}"></p>
+</div>
+<div id="errorMessageDiv" th:if="${error}">
+    <p style="color: red;" th:text="${error}"></p>
+</div>
 	<div id="modal" class="modal">
 		<div class="modal-content">
 			<span class="close" onclick="closeModal()">&times;</span>
@@ -300,6 +303,29 @@ button:hover {
 			// Update linkDestination field value
 			//linkDestination.value = concatenatedValue;
 		}
+		
+		// Set the duration for the messages to be displayed in milliseconds (e.g., 5000 for 5 seconds)
+		  var messageDuration = 5000;
+
+		  // Function to hide the success message after a certain duration
+		  function hideSuccessMessage() {
+		    var successMessageDiv = document.getElementById('successMessageDiv');
+		    if (successMessageDiv) {
+		      successMessageDiv.style.display = 'none';
+		    }
+		  }
+
+		  // Function to hide the error message after a certain duration
+		  function hideErrorMessage() {
+		    var errorMessageDiv = document.getElementById('errorMessageDiv');
+		    if (errorMessageDiv) {
+		      errorMessageDiv.style.display = 'none';
+		    }
+		  }
+
+		  // Set timeouts to hide messages after the specified duration
+		  setTimeout(hideSuccessMessage, messageDuration);
+		  setTimeout(hideErrorMessage, messageDuration);
 	</script>
 </body>
 </html>
